--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,8 @@
 {
 	"Главная страница": "Main page",
     "О сайте": "About page",
-    "Язык": "Русский"
+    "Язык": "Русский",
+    "Страница не найдена": "Page not found",
+    "Обновить страницу": "Reload page",
+    "Произошла непредвиденная ошибка": "Something went wrong"
 }
