--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,8 +1,9 @@
 {
-	"Главная страница": "Main page",
-    "О сайте": "About page",
-    "Язык": "Русский",
+	"Главная": "Main",
+    "О сайте": "About",
+    "Язык": "English",
     "Страница не найдена": "Page not found",
     "Обновить страницу": "Reload page",
-    "Произошла непредвиденная ошибка": "Something went wrong"
+    "Произошла непредвиденная ошибка": "Something went wrong",
+    "Короткий язык": "En"
 }
