--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,9 +1,10 @@
 {
-    "Главная страница": "Главная страница",
+    "Главная": "Главная",
     "О сайте": "О сайте",
     "Обновить страницу": "Обновить страницу",
     "Произошла непредвиденная ошибка": "Произошла непредвиденная ошибка",
     "Страница не найдена": "Страница не найдена",
-    "Язык": "Язык"
+    "Язык": "Русский",
+    "Короткий язык": "Ру"
   }
   
